src/objects/Add_Campaign_Members_by_Report_Log__c.object
<CustomObject>
    <description>When deployed as a managed package then users cannot see errors logged to the Debug Log. This object stores any errors and messages the Adminsitrator may need to know about when troubleshooting issues. You may delete these records after you have reviewed them.</description>
    <fields>
        <fullName>Detail__c</fullName>
        <label>Detail</label>
        <length>40000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Job_ID__c</fullName>
        <description>The Batchable or Queueable Job ID when this error occurred.</description>
        <inlineHelpText>The Batchable or Queueable Job ID when this error occurred.</inlineHelpText>
        <label>Job ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Log_Time__c</fullName>
        <description>In List Views and Reports the standard CreatedDate and LastModifiedDate display only the &quot;date&quot; portion and not the &quot;time&quot;. This formula field is workaround to to view the &quot;date&quot; and &quot;time&quot; together.</description>
        <formula>CreatedDate</formula>
        <label>Log Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Add Campaign Members by Report Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Summary__c</columns>
        <columns>Detail__c</columns>
        <columns>Log_Time__c</columns>
        <columns>Job_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Add Campaign Members by Report Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>